--- a/package.json
+++ b/package.json
@@ -8,6 +8,14 @@
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
-    "husky": "^6.0.0"
+    "husky": "^6.0.0",
+    "lint-staged": "^11.0.0",
+    "prettier": "^2.3.1"
+  },
+  "lint-staged": {
+    "*.(js|ts|tsx)": [
+      "prettier --write",
+      "git add"
+    ]
   }
 }
