--- a/package.json
+++ b/package.json
@@ -5,15 +5,31 @@
   "main": "index.js",
   "author": "Pavel Ostashkin <ostashpav@gmail.com>",
   "license": "MIT",
+  "scripts": {
+    "lint": "eslint src/**/**.* --rule \"{no-console: 2, no-alert: 2, no-debugger: 2}\"",
+    "test": "jest"
+  },
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
+    "@types/jest": "^26.0.23",
+    "@typescript-eslint/eslint-plugin": "^4.28.0",
+    "@typescript-eslint/parser": "^4.28.0",
+    "eslint": "^7.29.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-prettier": "^3.4.0",
     "husky": "^6.0.0",
+    "jest": "^27.0.5",
     "lint-staged": "^11.0.0",
-    "prettier": "^2.3.1"
+    "prettier": "^2.3.1",
+    "ts-jest": "^27.0.3",
+    "typescript": "^4.3.4"
   },
   "lint-staged": {
     "*.(js|ts|tsx)": [
+      "yarn lint",
       "prettier --write",
       "git add"
     ]
