--- a/package.json
+++ b/package.json
@@ -2,10 +2,22 @@
   "name": "resteps",
   "version": "0.0.1",
   "description": "react steps",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "module": "dist/index.umd.js",
+  "browser": "dist/index.es.js",
+  "jsnext:main": "dist/index.es.js",
+  "types": "dist/index.d.ts",
+  "files": [
+    "dist"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ostashkin/resteps"
+  },
   "author": "Pavel Ostashkin <ostashpav@gmail.com>",
   "license": "MIT",
   "scripts": {
+    "build": "rimraf dist && mkdirp dist && rollup -c",
     "lint": "eslint src/**/**.* --rule \"{no-console: 2, no-alert: 2, no-debugger: 2}\"",
     "prepare": "husky install",
     "test": "jest"
@@ -24,7 +36,12 @@
     "husky": "^6.0.0",
     "jest": "^27.0.5",
     "lint-staged": "^11.0.0",
+    "mkdirp": "^1.0.4",
     "prettier": "^2.3.1",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.52.2",
+    "rollup-plugin-terser": "^7.0.2",
+    "rollup-plugin-typescript2": "^0.30.0",
     "ts-jest": "^27.0.3",
     "typescript": "^4.3.4"
   },
