--- a/.guthub/workflows/request.yml
+++ b/.guthub/workflows/request.yml
@@ -10,7 +10,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 1
-      - name: Install dependecies
+      - name: Install dependencies
         run: npm install
 
       - name: Lint
