--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "resteps",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "react steps",
   "main": "dist/index.js",
   "module": "dist/index.umd.js",
@@ -26,6 +26,7 @@
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
     "@types/jest": "^26.0.23",
+    "@types/react": "^17.0.11",
     "@typescript-eslint/eslint-plugin": "^4.28.0",
     "@typescript-eslint/parser": "^4.28.0",
     "eslint": "^7.29.0",
@@ -51,5 +52,8 @@
       "prettier --write",
       "git add"
     ]
+  },
+  "peerDependencies": {
+    "react": ">=16.8.0"
   }
 }
