--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "license": "MIT",
   "scripts": {
     "build": "rimraf dist && mkdirp dist && rollup -c",
-    "lint": "eslint src/**/**.* --rule \"{no-alert: 2, no-debugger: 2}\"",
+    "lint": "eslint src/**/**.* --rule \"{no-console: 0, no-alert: 2, no-debugger: 2}\"",
     "prepare": "husky install",
     "test": "jest"
   },
